v1.1.6: Fixed fullscreen bug on some monitors as reported by /u/Tsopek on reddit, also added label to the synced tags button on the toolbar, fixed the overflow overlay, and the overflow scrollbar appearing in some cases when not hovered.

--- a/edge_style_vertical_tabs.css
+++ b/edge_style_vertical_tabs.css
@@ -1,4 +1,5 @@
   
+  
 /*
 Author: t. Macleod Sawyer (@Drannex42) 
 Version: 1.1.6
@@ -14,7 +15,7 @@ v1.1.2: Fixed favicon svg on internal pages on light themes.
 v1.1.3: Fixes the coloring on the close buttons, no longer attached to the accent of the window, but on the foreground lightest color. This tends to be far less jarring.
 v1.1.4: Added hibernate (.isdiscarded) class (dims tab - if you change this option in settings, browser restart required), added unread tab indicator. Thanks @Ararararagi for pointing out these needed features! 
 v1.1.5: Minor update, notification badge has better positioning and padding.
-v1.1.6: Fixed fullscreen bug on some monitors, as reported by /u/Tsopek on reddit, also added label to the synced tags button on the toolbar.
+v1.1.6: Fixed fullscreen bug on some monitors as reported by /u/Tsopek on reddit, also added label to the synced tags button on the toolbar, fixed the overflow overlay, and the overflow scrollbar appearing in some cases when not hovered.
 */
 
 .tabs-left #main {
@@ -144,7 +145,11 @@ v1.1.6: Fixed fullscreen bug on some monitors, as reported by /u/Tsopek on reddi
     display: block;
     margin-bottom: 50px;
     padding: 10px !important;
-    overflow: hidden;
+    overflow-y: overlay !important;
+}
+
+#tabs-container:not(:hover) .tab-strip{
+    overflow: hidden !important;
 }
 
 .tab-position {
@@ -517,4 +522,3 @@ Drop-Down Tab Stacks based on LonM.vivaldi.net (but heavily modified)
     background-position: top right !important;
     background-repeat: no-repeat !important;
 }
-
